--- a/assets/styles/modules/_instagram-feed.scss
+++ b/assets/styles/modules/_instagram-feed.scss
@@ -64,7 +64,8 @@
 }
 
 
-.single-locations {
+.single-locations,
+.page-whats-on {
     .instagram {
         padding: 180px 0;
         background: $gray-2;
